--- a/templates/about.html
+++ b/templates/about.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    {% if title %}
+    <title>Blog - {{title}} </title>
+    {% else %}
+    <title>Blog</title>
+    {% endif %}
 </head>
-<body>
-    {% for post in posts %}
-    <h1>{{ post.title }}</h1>
-    <p>By {{ post.author }} on {{ post,date_posted }} </p>
-    <p>{{ post.content }}</p>
-    {% endfor %}
+    <p>About page</p>
 </body>
 </html>
