--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     {% for post in posts %}
         <h1>{{ post.title }}</h1>
         <p>By {{ post["author"] }} on {{ post["date_posted"] }} </p>
-        <p>{{ post["content" }}</p>
+        <p>{{ post["content"] }}</p>
     {% endfor %}
 
 {% endblock %}
