update on files

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block body %}     
+{% block content %}     
     {% for post in posts %}
         <h1>{{ post.title }}</h1>
         <p>By {{ post["author"] }} on {{ post["date_posted"] }} </p>
@@ -8,4 +8,3 @@
     {% endfor %}
 
 {% endblock %}
-
