--- a/templates/about.html
+++ b/templates/about.html
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% if title %}
-    <title>Blog - {{title}} </title>
-    {% else %}
-    <title>Blog</title>
-    {% endif %}
-</head>
-    <p>About page</p>
-</body>
-</html>
+{% extends "layout.html"%}
+
+{% block content %}
+<p>About page</p>
+{% endblock%}
